# C90Compiler

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Vagrantfile  ass.c  c.c  c_translator_formative.sh  makefile  test.c  test.s  testbench.sh  testmips.sh  testregex.cpp  x  x.c  x.py  x.s  y
Python/formative/: f0-got.py  f10-got.py  f11  f11-got.py  f3-got.py  f6-got.py  f8-got.py
include/: Context.cpp  Context.hpp  Context_Type.hpp  Mp.cpp  Mp.hpp  Mp_Type.hpp  Stack.cpp  Stack.hpp  TempReg.cpp  TempReg.hpp  Type_mask.hpp  _Mp.hpp  ast.hpp  genInc.sh  inc.temp  makefile  mp.hpp  testAddr.cpp  testMp.cpp  testTree.cpp
include/ast/: _ast_abs.hpp  _expression.hpp  _left_list.hpp  _query_enum.hpp  _right_list.hpp  abstract_declarator.hpp  algebra.hpp  algebra_enum.hpp  argument_expression_list.hpp  assignment_expression.hpp  assignment_operator.hpp  cast_expression.hpp  compound_statement.hpp  conditional_expression.hpp  constant_expression.hpp  declaration.hpp  declaration_list.hpp  declaration_specifiers.hpp  declarator.hpp  direct_abstract_declarator.hpp  direct_declarator.hpp  expression.hpp  expression_statement.hpp  external_declaration.hpp  function_definition.hpp  init_declarator.hpp  init_declarator_list.hpp  initializer.hpp  initializer_list.hpp  iteration_statement.hpp  jump_statement.hpp  labeled_statement.hpp  parameter_declaration.hpp  parameter_list.hpp  postfix_expression.hpp  primary_expression.hpp  selection_statement.hpp  specifier_qualifier_list.hpp  statement.hpp  statement_list.hpp  (+7 more)
include/temp/: 4arg.c  a.mips.s  a.s  beq.c  beq.mips.s  li.mips.s  li.s  lifloat.mips.s  lifloat.s  makefile  mv.mips.s  mv.s  x.c  x.mips.s  x.s
ref/: README.md
script/: config.sh  testansi.sh  testmips.sh
scripts/: c_translator_formative.sh  config.sh  profile_memory.sh  testansi.sh  testmips.sh  testpy.sh  verifyTestcase.sh
src/: C90.flex  C90.y  C90_lexer.yy.cpp  C90_parser.output  C90_parser.tab.cpp  C90_parser.tab.hpp  c_compiler.cpp  linker.ld
test/: abi.c  abi.s  x.c
test/C_driver_exec/: IF_F  IF_T  main  test_program
test/C_driver_test/: 84.c  FOR_N.c  GLOBAL.c  IF_ELSE_F.c  IF_ELSE_T.c  IF_F.c  addflow.c  addmix.c  addneg.c  addu.c  and.c  array.c  array_simple.c  bitwise.c  fibonacci.c  for.c  forinc.c  func_4arg.c  func_GE4arg.c  ifelse.c  multRec.c  muti_func_noarg.c  nestFunc.c  oneLif.c  or.c  perDec.c  perInc.c  postInc.c  ptr.c  ptr_array.c  recadd.c  shortcircuit.c  sizeof.c  sub.c  submix.c  test_program.c  testnegate.c  testnegatepro.c  testnotpro.c  while.c  (+1 more)
test/C_mips_bin/: IF_F  IF_T  addu  and  bitwise  for  forinc  func_4arg  func_GE4arg  ifelse  main  muti_func_noarg  or  sub  test_program  while  xor
test/C_output/: IF_F.s  IF_T.s  (+2 more)
(+398 files in other folders)
